tests/types/errors/user_type_field_mismatch.err
1. error[T008]: type mismatch: expected string, got int
  --> tests/types/errors/user_type_field_mismatch.mochi:6:34

  6 | let bob: Person = Person { name: 123, age: "old" }
    |                                  ^

help:
  Change the value to match the expected type.
